add english translation

--- a/gas-mixture.html
+++ b/gas-mixture.html
@@ -43,24 +43,24 @@
                 <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
+                    <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
+                <a href="realizations.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
                 <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
@@ -69,20 +69,18 @@
                     <a href="gas-mixture.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                    </a>
+                    <a href="ozonation.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                <a href="about-us.html" class="menu__link menu__link--space js-anchor--link">About us</a>
               </li>
               <li class="menu__item">
-                <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                <a href="contact.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
                 <a href="przetargi.html" class="menu__link-ue js-anchor--link">
@@ -142,19 +140,15 @@
           </div>
         </div>
         <div class="gas-mixture__col gas-mixture__col--2">
-          <h2 class="gas-mixture__col-title gas-mixture__col-title--1">Mieszanka gazów</h2>
-          <p class="gas-mixture__col-text">Technologia 3NS oparta jest na zastosowaniu innowacyjnego medium czyszczącego, którego głównym elementem jest specjalnie przygotowywana na rampie gazowej samochodu technologicznego mieszanka gazów.</p>
+          <h2 class="gas-mixture__col-title gas-mixture__col-title--1">Gas mixture</h2>
+          <p class="gas-mixture__col-text">The 3NS technology is based on an innovative cleaning medium, the main element of which is a gas mixture specially prepared on the gas ramp of a technological car.</p>
         </div>
       </div>
 
       <div class="gas-mixture__row gas-mixture__row--2">
         <div class="gas-mixture__col gas-mixture__col--3">
-          <h3 class="gas-mixture__col-title">Gaz pod ciśnieniem</h3>
-          <p class="gas-mixture__col-text">Mieszanka w postaci mgły gazowej, podawana jest
-            na czyszczone urządzenia za pomocą specjalistycznych dysz. Jej skład i ciśnienie robocze (nieprzekraczające wartości
-            0,5 – 1,5 bara) regulowane są poprzez moduł sterujący –
-            w zależności od rodzaju, stopnia zabrudzenia oraz rodzaju
-            i wrażliwości czyszczonych urządzeń.</p>
+          <h3 class="gas-mixture__col-title">Gas under pressure</h3>
+          <p class="gas-mixture__col-text">The mixture in the form of gaseous mist is fed to the cleaned devices with specialized nozzles. Its composition and operating pressure (not exceeding 0.5 - 2.5 bar) are regulated by the control module - depending on the type, degree of soiling and the type and sensitivity of the devices being cleaned.</p>
         </div>
         <div class="gas-mixture__col gas-mixture__col--4">
           <div class="gas-mixture__graphics gas-mixture__graphics--2">
@@ -175,16 +169,14 @@
           </div>
         </div>
         <div class="gas-mixture__col gas-mixture__col--6">
-          <h3 class="gas-mixture__col-title">Technologia 3N Solutions</h3>
-          <p class="gas-mixture__col-text">Mieszanka dociera w niedostępne dla tradycyjnych metod (chemia, sprężone powietrze, pędzelki, czyściwo, benzyna, nafta) miejsca i zakamarki podzespołów. Po dostaniu się pod zabrudzenie i zetknięciu się z ciśnieniem atmosferycznym zwiększa swoją objętość około kilkusetkrotnie, usuwając nawet najbardziej oporne i groźne zanieczyszczenia, nie ingerując w strukturę podzespołów.</p>
+          <h3 class="gas-mixture__col-title">3N Solutions technology</h3>
+          <p class="gas-mixture__col-text">The mixture reaches the places and recesses of components that are inaccessible to traditional methods. After getting under the dirt and contact with atmospheric pressure, the medium increases its volume several hundred times, effectively removing even these pollutants that are most resilient, and thus pose the greatest danger to the device, without interfering with the structure of components.</p>
         </div>
       </div>
       <div class="gas-mixture__row gas-mixture__row--4">
         <div class="gas-mixture__col gas-mixture__col--7">
-          <h3 class="gas-mixture__col-title">Bezpieczna i przyjazna</h3>
-          <p class="gas-mixture__col-text">Mieszanka jest całkowicie sucha, nie powoduje zawilgocenia, nie wchodzi w reakcje fizyczne, chemiczne z czyszczonymi elementami, nie ma właściwości ściernych, jest nietoksyczna, bezwonna, niepalna i aseptyczna. Jest całkowicie bezpieczna dla wrażliwych elementów elektronicznych jak i osób, które mają z nią bezpośrednią styczność.
-            Czyszczenie popożarowe - mamy doświadczenia poparte dużymi zleceniami w sytuacjach popożarowych.
-          </p>
+          <h3 class="gas-mixture__col-title">Safe and friendly</h3>
+          <p class="gas-mixture__col-text">The mixture is completely dry, it does not undergo physical and chemical reactions with the cleaned elements, it has no abrasive properties. The technology can be used in many areas other than electrical devices (heat exchangers, valve islands, hydraulics, constructions, technological machines, welding machines, etc.)</p>
         </div>
         <div class="gas-mixture__col gas-mixture__col--8">
           <div class="gas-mixture__graphics gas-mixture__graphics--4">
@@ -204,8 +196,8 @@
           </div>
         </div>
         <div class="gas-mixture__col gas-mixture__col--10">
-          <h3 class="gas-mixture__col-title">Czyszczenie</h3>
-          <p class="gas-mixture__col-text">Zanieczyszczenia usuwane z urządzeń i podzespołów w miejscu podania mieszanki zabierane są automatycznie poprzez wyciąg ciśnieniowy.</p>
+          <h3 class="gas-mixture__col-title">Cleaning</h3>
+          <p class="gas-mixture__col-text">Contaminants removed from devices and components at the place where the mixture is applied are collected automatically by a pressure extractor.</p>
         </div>
       </div>
     </section>
@@ -230,18 +222,18 @@
         <div class="footer-content__bottom">
           <div class="footer-content__bottom-left">
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
               <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
               <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
                 <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
                 <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
                 00-819 Warszawa
               </span>
@@ -250,7 +242,7 @@
           </div>
           <div class="footer-content__bottom-center">
             <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
+              <h4 class="footer-content__bottom-center__title">Find us</h4>
               <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
               </a>
               <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
@@ -263,9 +255,10 @@
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
               <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
+                KRS: 0000257515, District Court for the Capital City of
+                Warsaw, XII Commercial Division of the National
+                Court Register NIP: 5213388077, REGON: 140555502
+                Share capital: PLN 50,000 (paid up in full)</span>
             </div>
           </div>
         </div>
