--- a/hydrodynamic-cleaning-2.html
+++ b/hydrodynamic-cleaning-2.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>3N Solutions - Ozonowanie</title>
+  <title>Czyszczenie hydrodynamiczne 3n Solutions</title>
 
   <!-- Google Fonts -->
 
@@ -45,52 +45,44 @@
                 <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
-                    </a>
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
-                    </a>
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
-                    </a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Pomiary termowizyjne i elektryczne
-                    </a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizacje</a>
+                <a href="realizations.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Technologie<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
-                    </a>
+                    <a href="gas-mixture.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                    </a>
+                    <a href="ozonation.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                <a href="about-us.html" class="menu__link menu__link--space js-anchor--link">About us</a>
               </li>
               <li class="menu__item">
-                <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                <a href="contact.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
                 <a href="przetargi.html" class="menu__link-ue js-anchor--link">
@@ -130,64 +122,96 @@
   </header>
   <!-- end of header -->
 
-  <!-- ozonation -->
-  <article class="ozonation">
-    <figure class="ozonation__shadow ozonation__shadow--1">
+  <!-- hydrodynamic -->
+  <article class="hydrodynamic">
+    <figure class="hydrodynamic__heading">
       <picture>
-        <source srcset="images/heading-1.webp" type="image/webp" class="ozonation-img">
-        <source srcset="images/heading-1.png" type="image/png" class="ozonation-img">
-        <img src="images/heading-1.png" class="ozonation-img" alt="">
+        <source srcset="images/heading-6.webp" type="image/webp" class="hydrodynamic-img">
+        <source srcset="images/heading-6.png" type="image/png" class="hydrodynamic-img">
+        <img src="images/heading-6.png" class="hydrodynamic-img" alt="Czyszczenie hydrodynamiczne 3n solutions">
       </picture>
     </figure>
     <section class="container">
-      <div class="ozonation__row ozonation__row--1">
-        <div class="ozonation__col ozonation__col--1">
-          <div class="ozonation__graphics ozonation__graphics--1">
-            <figure class="ozonation__shadow ozonation__shadow--2">
-              <img src="images/img__17.png" class="ozonation__img ozonation__img--1" alt="">
+      <div class="hydrodynamic__row hydrodynamic__row--1">
+        <div class="hydrodynamic__col hydrodynamic__col--1">
+          <h2 class="hydrodynamic__col-title hydrodynamic__col-title--1">Hydrodynamic cleaning</h2>
+          <p class="hydrodynamic__col-text">The high pressure solutions we use enable cleaning and removal of
+            concrete, corrosion, rust, paints, hard deposits and many other coatings that are difficult to remove. Using mobile aggregates and specialized nozzles, we can access places that are impossible to reach.</p>
+        </div>
+        <div class="hydrodynamic__col hydrodynamic__col--2">
+          <div class="hydrodynamic__graphics hydrodynamic__graphics--1">
+            <figure class="hydrodynamic__shadow hydrodynamic__shadow--1">
+              <img src="images/img__7.png" class="hydrodynamic__img hydrodynamic__img--1" alt="">
             </figure>
-            <div class="ozonation__shape ozonation__shape--1"></div>
-          </div>
-        </div>
-        <div class="ozonation__col ozonation__col--2">
-          <h2 class="ozonation__col-title">Ozonowanie</h2>
-          <p class="ozonation__col-text ozonation__col-text--1">Ozonowanie jest metodą, do której wykorzystywany jest gaz – ozon (O3) czasem nazywany aktywnym tlenem, który jest jednym z najskuteczniejszych znanych środków dezynfekujących.
-
-            Ozon cechuje się tym, że jest o niskiej trwałości, ma właściwości niepalne, ponadto łatwo rozpuszcza się w wodzie. Przy jego stosowaniu należy jednak zachować szczególną ostrożność, gdyż jest to substancja o wysokim stopniu toksyczności oraz właściwościach aseptycznych. Z tego też powodu ozonowanie powinno by wykonywane wyłącznie przez specjalistyczne ekipy posiadające stosowane uprawnienia oraz właściwe certyfikaty i atesty stosowanych do wykonania procesu sprzętów.</p>
-        </div>
-      </div>
-      <div class="ozonation__row ozonation__row--2">
-        <div class="ozonation__col ozonation__col--3">
-          <p class="ozonation__col-text ozonation__col-text--2">Ozonowanie polega na wykorzystaniu reakcji chemicznej ozonu polegającej na wchodzeniu w działanie ze związkami organicznymi o szkodliwym wpływie na ludzki organizm takimi jak pleśń, grzyby (oraz ich zarodniki), drobnoustroje (bakterie, wirusy, pierwotniaki, roztocza, alergeny). W efekcie w pomieszczeniu giną wszystkie szkodliwe związki, a w powietrzu pozostaje świeży, delikatny zapach. Podobne efekty ozonowania można m.in. odczuć w naturze tuż po burzy (wzrasta wówczas stężenie ozonu w powietrzu).Do ozonowania pomieszczeń używane są specjalne generatory ozonu, które powodują zupełnie zniszczenie szkodliwych substancji i ich eliminację z pomieszczenia. Wytwarzane cząsteczki ozonu w czasie rozkładu powodują uwalnianie cząsteczki tlenu, która łącząc się ze wspomnianymi związkami powodują ich neutralizowanie.</p>
-        </div>
-        <div class="ozonation__col ozonation__col--4">
-          <div class="ozonation__graphics ozonation__graphics--2">
-            <figure class="ozonation__shadow ozonation__shadow--3">
-              <img src="images/img__18.png" class="ozonation__img ozonation__img--2" alt="">
-            </figure>
-            <div class="ozonation__shape ozonation__shape--2"></div>
           </div>
         </div>
       </div>
-      <div class="ozonation__row ozonation__row--3">
-        <div class="ozonation__col ozonation__col--5">
-          <div class="ozonation__graphics ozonation__graphics--3">
-            <figure class="ozonation__shadow ozonation__shadow--4">
-              <img src="images/img__19.png" class="ozonation__img ozonation__img--3" alt="">
-            </figure>
-            <div class="ozonation__shape ozonation__shape--3"></div>
-          </div>
-        </div>
-        <div class="ozonation__col ozonation__col--6">
-          <p class="ozonation__col-text ozonation__col-text--3">Ozonowanie jest metodą, dzięki której można pozbyć się z pomieszczenia szkodliwych alergenów powodujących reakcje uczuleniowe czy problemy z górnymi drogami oddechowymi.
-            Stosuje się je również, by odświeżyć zakażone powietrze, usunąć nieprzyjemne zapachy różnego pochodzenia (zarówno naturalne, jak i sztuczne), a także usunąć wszelkie szkodliwe związki organiczne.
-            Dzięki regularnemu stosowaniu tej metody dezynfekcji powietrze w danym pomieszczeniu jest znacznie czystsze, świeże i niweluje powstawanie wielu problemów zdrowotnych.
-            Po zastosowaniu ozonowania przez kilka tygodni w pomieszczeniu pozostaje charakterystyczny zapach. Bezpieczne dla organizmu jest stężenie to od 0,02-0,05 ppm, natomiast stężenie powyżej 0,08 ppm ozonu we wdychanym powietrzu utrzymujące się przez okres przynajmniej 8 godzin jest już niebezpieczne dla organizmu.</p>
-        </div>
+      <div class="hydrodynamic__row hydrodynamic__row--2">
+          <p class="hydrodynamic__row-text hydrodynamic__row-text--1">Our working methods can clean and remove concrete, corrosion, rust, paint, hard deposits and many other hard-to-remove coatings.</p>
       </div>
     </section>
+      <div class="hydrodynamic__row hydrodynamic__row--3">
+        <section class="container">
+          <div class="hydrodynamic__sub-row">
+            <div class="hydrodynamic__row-boxes">
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--1">Cleaning of 
+                heat exchangers</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--2">Cleaning of pipelines, 
+                pipe systems</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--3">Cleaning of silos, 
+                tanks</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--4">Cleaning of reactors, 
+                boilers</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--5">Cleaning of industrial 
+                installations, floors and floors</div>
+              <div class="hydrodynamic__row-box hydrodynamic__row-box--6">Cleaning during 
+                planned 
+                renovations</div>
+            </div>
+            <div class="hydrodynamic__row-wrap">
+              <div class="hydrodynamic__col hydrodynamic__col--3">
+                <div class="hydrodynamic__graphics hydrodynamic__graphics--2">
+                  <figure class="hydrodynamic__shadow hydrodynamic__shadow--2">
+                    <img src="images/img__8.png" class="hydrodynamic__img hydrodynamic__img--2" alt="">
+                  </figure>
+                </div>
+              </div>
+              <div class="hydrodynamic__col hydrodynamic__col--4">
+                <h3 class="hydrodynamic__col-title hydrodynamic__col-title--2">Construction renovation</h3>
+                <p class="hydrodynamic__col-text">We have a wide range of services tailored to individual industries. With efficient, specialized equipment and a team of experienced experts, we offer services of the highest European standard.We will provide you with, among others, cleaning and painting services for steel structures.</p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+      <section class="container">
+        <div class="hydrodynamic__row hydrodynamic__row--4">
+          <div class="hydrodynamic__col hydrodynamic__col--5">
+            <h3 class="hydrodynamic__col-title hydrodynamic__col-title--3">Tailor - made solutions</h3>
+            <p class="hydrodynamic__col-text">In many cases, a problem arising during the production process and cannot be solved by a standard method available on the market. 
+              It is then necessary to have an individual approach to the task and to develop a comprehensive project of its implementation. Our educated and experienced team will be happy to help you solve any problem related to dirt!
+              Industries in which we provide services include:</p>
+              <ul class="hydrodynamic__col-list">
+                <li class="hydrodynamic__col-item">Petrochemical Industry</li>
+                <li class="hydrodynamic__col-item">Chemical industry</li>
+                <li class="hydrodynamic__col-item">Food industry</li>
+                <li class="hydrodynamic__col-item">Power engineering</li>
+                <li class="hydrodynamic__col-item">Automotive industry</li>
+                <li class="hydrodynamic__col-item">Metallurgical Industry</li>
+                <li class="hydrodynamic__col-item">Paper Production</li>
+              </ul>
+          </div>
+          <div class="hydrodynamic__col hydrodynamic__col--6">
+            <div class="hydrodynamic__graphics hydrodynamic__graphics--3">
+              <figure class="hydrodynamic__shadow hydrodynamic__shadow--3">
+                <img src="images/img__9.png" class="hydrodynamic__img hydrodynamic__img--3" alt="">
+              </figure>
+            </div>
+          </div>
+        </div>
+      </section>
   </article>
-  <!-- end of ozonation-->
+  <!-- end of hydrodynamic -->
 
   <!-- footer -->
   <footer class="footer">
@@ -207,18 +231,18 @@
         <div class="footer-content__bottom">
           <div class="footer-content__bottom-left">
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
               <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
               <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
                 <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
                 <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
                 00-819 Warszawa
               </span>
@@ -227,7 +251,7 @@
           </div>
           <div class="footer-content__bottom-center">
             <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
+              <h4 class="footer-content__bottom-center__title">Find us</h4>
               <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
               </a>
               <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
@@ -240,9 +264,10 @@
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
               <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
+                KRS: 0000257515, District Court for the Capital City of
+                Warsaw, XII Commercial Division of the National
+                Court Register NIP: 5213388077, REGON: 140555502
+                Share capital: PLN 50,000 (paid up in full)</span>
             </div>
           </div>
         </div>
@@ -255,6 +280,5 @@
 
 <!-- JS Scripts -->
 <script src="js/app.js"></script>
-
 </body>
 </html>
