--- a/ozonation.html
+++ b/ozonation.html
@@ -5,16 +5,14 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Czyszczenie hydrodynamiczne 3n Solutions</title>
-
-  <!-- Google Fonts -->
+  <title>Ozonation 3n Solutions</title>
 
   <!-- Style CSS -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 </head>
 <body>
 <!-- wrapper -->
@@ -45,52 +43,44 @@
                 <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
-                    </a>
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
-                    </a>
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
-                    </a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Pomiary termowizyjne i elektryczne
-                    </a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizacje</a>
+                <a href="realizations.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Technologie<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
-                    </a>
+                    <a href="gas-mixture.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                    </a>
+                    <a href="ozonation.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                <a href="about-us.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
               </li>
               <li class="menu__item">
-                <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                <a href="contact.html" class="menu__link js-anchor--link">Kontakt</a>
               </li>
               <li class="menu__item menu-item--ue">
                 <a href="przetargi.html" class="menu__link-ue js-anchor--link">
@@ -130,94 +120,61 @@
   </header>
   <!-- end of header -->
 
-  <!-- hydrodynamic -->
-  <article class="hydrodynamic">
-    <figure class="hydrodynamic__heading">
+  <!-- ozonation -->
+  <article class="ozonation">
+    <figure class="ozonation__shadow ozonation__shadow--1">
       <picture>
-        <source srcset="images/heading-6.webp" type="image/webp" class="hydrodynamic-img">
-        <source srcset="images/heading-6.png" type="image/png" class="hydrodynamic-img">
-        <img src="images/heading-6.png" class="hydrodynamic-img" alt="Czyszczenie hydrodynamiczne 3n solutions">
+        <source srcset="images/heading-1.webp" type="image/webp" class="ozonation-img">
+        <source srcset="images/heading-1.png" type="image/png" class="ozonation-img">
+        <img src="images/heading-1.png" class="ozonation-img" alt="">
       </picture>
     </figure>
     <section class="container">
-      <div class="hydrodynamic__row hydrodynamic__row--1">
-        <div class="hydrodynamic__col hydrodynamic__col--1">
-          <h2 class="hydrodynamic__col-title hydrodynamic__col-title--1">Czyszczenie hydrodynamiczne</h2>
-          <p class="hydrodynamic__col-text">Poprawa efektywności oraz bezpieczeństwa działania zakładów naszych Klientów, poprzez stosowaną przez nas technologię czyszczenia powierzchni z wykorzystaniem wysokich ciśnień, która pozwala szybko i skutecznie usuwać wszelkie zabrudzenia.  Nasze rozwiązania znajdują szerokie zastosowanie niemal we wszystkich gałęziach przemysłu. Korzystając z mobilnych agregatów i specjalistycznych dysz, możemy docierać do trudno dostępnych miejsc. </p>
-        </div>
-        <div class="hydrodynamic__col hydrodynamic__col--2">
-          <div class="hydrodynamic__graphics hydrodynamic__graphics--1">
-            <figure class="hydrodynamic__shadow hydrodynamic__shadow--1">
-              <img src="images/img__7.png" class="hydrodynamic__img hydrodynamic__img--1" alt="">
+      <div class="ozonation__row ozonation__row--1">
+        <div class="ozonation__col ozonation__col--1">
+          <div class="ozonation__graphics ozonation__graphics--1">
+            <figure class="ozonation__shadow ozonation__shadow--2">
+              <img src="images/img__17.png" class="ozonation__img ozonation__img--1" alt="">
             </figure>
+            <div class="ozonation__shape ozonation__shape--1"></div>
+          </div>
+        </div>
+        <div class="ozonation__col ozonation__col--2">
+          <h2 class="ozonation__col-title">Ozonation</h2>
+          <p class="ozonation__col-text ozonation__col-text--1">Ozonation is a method that uses a gas - ozone (O3), sometimes called active oxygen, which is one of the most effective disinfectants known.
+
+            Ozone is characterized by the fact that it is of low durability, has non-flammable properties, and also dissolves easily in water. However, special care should be taken when using it, because it is a substance with a high degree of toxicity and aseptic properties. For this reason, ozonation should be performed only by specialized teams with the appropriate permissions and appropriate certificates and approvals for the equipment used to perform the process.</p>
+        </div>
+      </div>
+      <div class="ozonation__row ozonation__row--2">
+        <div class="ozonation__col ozonation__col--3">
+          <p class="ozonation__col-text ozonation__col-text--2">Ozonation is based on the use of a chemical reaction of ozone consisting in entering into action with organic compounds harmful to the human body, such as mold, fungi (and their spores), microorganisms (bacteria, viruses, protozoa, mites, allergens). As a result, all harmful compounds are lost in the room and a fresh, delicate fragrance remains in the air. Similar effects of ozonation can be feeling in nature right after the storm (then the concentration of ozone in the air increases). Special ozone generators are used to ozone the rooms, which completely destroy harmful substances and eliminate them from the room. The ozone molecules produced during the decomposition release the oxygen molecule, which by combining with the mentioned compounds neutralize them.</p>
+        </div>
+        <div class="ozonation__col ozonation__col--4">
+          <div class="ozonation__graphics ozonation__graphics--2">
+            <figure class="ozonation__shadow ozonation__shadow--3">
+              <img src="images/img__18.png" class="ozonation__img ozonation__img--2" alt="">
+            </figure>
+            <div class="ozonation__shape ozonation__shape--2"></div>
           </div>
         </div>
       </div>
-      <div class="hydrodynamic__row hydrodynamic__row--2">
-          <p class="hydrodynamic__row-text hydrodynamic__row-text--1">Nasze metody pracy umożliwiają czyszczenie i usuwanie betonu, korozji, rdzy, farb, twardych
-            osadów oraz wielu innych trudnych do zlikwidowania powłok.</p>
+      <div class="ozonation__row ozonation__row--3">
+        <div class="ozonation__col ozonation__col--5">
+          <div class="ozonation__graphics ozonation__graphics--3">
+            <figure class="ozonation__shadow ozonation__shadow--4">
+              <img src="images/img__19.png" class="ozonation__img ozonation__img--3" alt="">
+            </figure>
+            <div class="ozonation__shape ozonation__shape--3"></div>
+          </div>
+        </div>
+        <div class="ozonation__col ozonation__col--6">
+          <p class="ozonation__col-text ozonation__col-text--3">Ozone treatment is a method that allows you to get rid of harmful allergens from the room that cause allergic reactions or problems with the upper respiratory tract. They are also used to refresh infected air, remove unpleasant odors of various origins (both natural and artificial), and remove any harmful organic compounds. Thanks to the regular use of this method of disinfection, the air in a given room is much cleaner, fresh and eliminates many health problems. After ozonation is applied, a characteristic smell remains in the room for several weeks. The concentration of 0.02-0.05 ppm is safe for the body, while the concentration above 0.08 ppm of ozone in the inhaled air for at least 8 hours is already dangerous for the body.</p>
+        </div>
       </div>
     </section>
-      <div class="hydrodynamic__row hydrodynamic__row--3">
-        <section class="container">
-          <div class="hydrodynamic__sub-row">
-            <div class="hydrodynamic__row-boxes">
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--1">Czyszczenie
-                wymienników ciepła</div>
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--2">Czyszczenie rurociągów,
-                układów rur</div>
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--3">Czyszczenie silosów,
-                zbiorników</div>
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--4">Czyszczenie reaktorów,
-                kotłów</div>
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--5">Czyszczenie instalacji
-                przemysłowych, podłóg, posadzek</div>
-              <div class="hydrodynamic__row-box hydrodynamic__row-box--6">Czyszczenie podczas remontów
-                planowych</div>
-            </div>
-            <div class="hydrodynamic__row-wrap">
-              <div class="hydrodynamic__col hydrodynamic__col--3">
-                <div class="hydrodynamic__graphics hydrodynamic__graphics--2">
-                  <figure class="hydrodynamic__shadow hydrodynamic__shadow--2">
-                    <img src="images/img__8.png" class="hydrodynamic__img hydrodynamic__img--2" alt="">
-                  </figure>
-                </div>
-              </div>
-              <div class="hydrodynamic__col hydrodynamic__col--4">
-                <h3 class="hydrodynamic__col-title hydrodynamic__col-title--2">Renowacja konstrukcji</h3>
-                <p class="hydrodynamic__col-text">Dysponujemy szerokim wachlarzem usług dostosowanych
-                  do poszczególnych branż. Posiadając wydajny, specjalistyczny sprzęt oraz zespół doświadczonych, oddanych swojej pracy ekspertów, oferujemy usługi w najwyższym, europejskim standardzie. Przeprowadzimy dla Państwa między innymi usługi czyszczenia i malowania konstrukcji stalowych.</p>
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-      <section class="container">
-        <div class="hydrodynamic__row hydrodynamic__row--4">
-          <div class="hydrodynamic__col hydrodynamic__col--5">
-            <h3 class="hydrodynamic__col-title hydrodynamic__col-title--3">Specjalistyczna wiedza inżynierska - rozwiązania szyte na miarę</h3>
-            <p class="hydrodynamic__col-text">W wielu przypadkach problemu powstającego podczas procesu produkcyjnego nie można rozwiązać standardową metodą dostępną na rynku. Niezbędne jest wtedy innowacyjne podejście do zadania oraz opracowanie kompleksowego projektu jego wykonania. Nasz wykształcony i doświadczony zespół chętnie pomoże rozwiązać każdy problem związany z zabrudzeniem! Branże w których realizujemy usługi to m.in.:</p>
-            <ul class="hydrodynamic__col-list">
-              <li class="hydrodynamic__col-item">Przemysł Petrochemiczny</li>
-              <li class="hydrodynamic__col-item">Przemysł Chemiczny</li>
-              <li class="hydrodynamic__col-item">Przemysł Spożywczy</li>
-              <li class="hydrodynamic__col-item">Energetyka</li>
-              <li class="hydrodynamic__col-item">Przemysł Automotive</li>
-              <li class="hydrodynamic__col-item">Przemysł Hutniczy</li>
-              <li class="hydrodynamic__col-item">Produkcja Papieru</li>
-            </ul>
-          </div>
-          <div class="hydrodynamic__col hydrodynamic__col--6">
-            <div class="hydrodynamic__graphics hydrodynamic__graphics--3">
-              <figure class="hydrodynamic__shadow hydrodynamic__shadow--3">
-                <img src="images/img__9.png" class="hydrodynamic__img hydrodynamic__img--3" alt="">
-              </figure>
-            </div>
-          </div>
-        </div>
-      </section>
   </article>
-  <!-- end of hydrodynamic -->
+  <!-- end of ozonation-->
 
   <!-- footer -->
   <footer class="footer">
@@ -237,18 +194,18 @@
         <div class="footer-content__bottom">
           <div class="footer-content__bottom-left">
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
               <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
               <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
                 <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
                 <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
                 00-819 Warszawa
               </span>
@@ -257,7 +214,7 @@
           </div>
           <div class="footer-content__bottom-center">
             <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
+              <h4 class="footer-content__bottom-center__title">Find us</h4>
               <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
               </a>
               <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
@@ -270,9 +227,10 @@
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
               <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
+                KRS: 0000257515, District Court for the Capital City of
+                Warsaw, XII Commercial Division of the National
+                Court Register NIP: 5213388077, REGON: 140555502
+                Share capital: PLN 50,000 (paid up in full)</span>
             </div>
           </div>
         </div>
@@ -285,5 +243,6 @@
 
 <!-- JS Scripts -->
 <script src="js/app.js"></script>
+
 </body>
 </html>
